added more font pairings

--- a/index.html
+++ b/index.html
@@ -821,21 +821,110 @@
        (heading font → body font, google fonts safe)
        ==================================================== */
     const FONT_PAIRS = [
-      { heading: 'Playfair Display', body: 'Source Sans 3',   headingWeight: '700', bodyWeight: '400' },
-      { heading: 'Fraunces',         body: 'DM Sans',          headingWeight: '700', bodyWeight: '400' },
-      { heading: 'Libre Baskerville',body: 'Lato',             headingWeight: '700', bodyWeight: '400' },
-      { heading: 'Cormorant Garamond',body:'Proza Libre',      headingWeight: '700', bodyWeight: '400' },
-      { heading: 'Josefin Sans',     body: 'Nunito',           headingWeight: '700', bodyWeight: '400' },
-      { heading: 'Space Grotesk',    body: 'IBM Plex Sans',    headingWeight: '700', bodyWeight: '400' },
-      { heading: 'Unbounded',        body: 'Plus Jakarta Sans',headingWeight: '700', bodyWeight: '400' },
-      { heading: 'Syne',             body: 'Outfit',           headingWeight: '800', bodyWeight: '400' },
-      { heading: 'Abril Fatface',    body: 'Raleway',          headingWeight: '400', bodyWeight: '400' },
-      { heading: 'Rokkitt',          body: 'Mulish',           headingWeight: '700', bodyWeight: '400' },
-      { heading: 'Bitter',           body: 'Quicksand',        headingWeight: '700', bodyWeight: '400' },
-      { heading: 'Exo 2',            body: 'Karla',            headingWeight: '700', bodyWeight: '400' },
-      { heading: 'DM Serif Display', body: 'Jost',             headingWeight: '400', bodyWeight: '400' },
-      { heading: 'Bodoni Moda',      body: 'Work Sans',        headingWeight: '700', bodyWeight: '400' },
-      { heading: 'Yeseva One',       body: 'Crimson Pro',      headingWeight: '400', bodyWeight: '400' },
+      // --- EDITORIAL / LITERARY ---
+      { heading: 'Playfair Display',   body: 'Source Sans 3',     headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Playfair Display',   body: 'Lato',              headingWeight: '700', bodyWeight: '300' },
+      { heading: 'Cormorant Garamond', body: 'Proza Libre',       headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Cormorant Garamond', body: 'Nunito Sans',       headingWeight: '600', bodyWeight: '300' },
+      { heading: 'Libre Baskerville',  body: 'Lato',              headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Libre Baskerville',  body: 'Source Sans 3',     headingWeight: '700', bodyWeight: '400' },
+      { heading: 'EB Garamond',        body: 'Mulish',            headingWeight: '700', bodyWeight: '400' },
+      { heading: 'EB Garamond',        body: 'Karla',             headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Lora',               body: 'Source Sans 3',     headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Lora',               body: 'Nunito',            headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Merriweather',       body: 'Open Sans',         headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Merriweather',       body: 'Lato',              headingWeight: '900', bodyWeight: '300' },
+      { heading: 'Bitter',             body: 'Quicksand',         headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Bitter',             body: 'Nunito',            headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Rokkitt',            body: 'Mulish',            headingWeight: '700', bodyWeight: '400' },
+      // --- ELEGANT / LUXURY ---
+      { heading: 'Bodoni Moda',        body: 'Work Sans',         headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Bodoni Moda',        body: 'Raleway',           headingWeight: '700', bodyWeight: '300' },
+      { heading: 'DM Serif Display',   body: 'Jost',              headingWeight: '400', bodyWeight: '400' },
+      { heading: 'DM Serif Display',   body: 'DM Sans',           headingWeight: '400', bodyWeight: '400' },
+      { heading: 'Yeseva One',         body: 'Crimson Pro',       headingWeight: '400', bodyWeight: '400' },
+      { heading: 'Yeseva One',         body: 'Libre Franklin',    headingWeight: '400', bodyWeight: '400' },
+      { heading: 'Fraunces',           body: 'DM Sans',           headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Fraunces',           body: 'Inter',             headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Abril Fatface',      body: 'Raleway',           headingWeight: '400', bodyWeight: '400' },
+      { heading: 'Abril Fatface',      body: 'Karla',             headingWeight: '400', bodyWeight: '400' },
+      // --- MODERN SANS-SERIF ---
+      { heading: 'Space Grotesk',      body: 'IBM Plex Sans',     headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Space Grotesk',      body: 'Nunito Sans',       headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Syne',               body: 'Outfit',            headingWeight: '800', bodyWeight: '400' },
+      { heading: 'Syne',               body: 'DM Sans',           headingWeight: '800', bodyWeight: '400' },
+      { heading: 'Josefin Sans',       body: 'Nunito',            headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Josefin Sans',       body: 'Raleway',           headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Raleway',            body: 'Open Sans',         headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Raleway',            body: 'Lato',              headingWeight: '800', bodyWeight: '300' },
+      { heading: 'Nunito',             body: 'Source Sans 3',     headingWeight: '800', bodyWeight: '400' },
+      { heading: 'Outfit',             body: 'Mulish',            headingWeight: '700', bodyWeight: '400' },
+      // --- TECH / DEVELOPER ---
+      { heading: 'Unbounded',          body: 'Plus Jakarta Sans', headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Exo 2',              body: 'Karla',             headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Exo 2',              body: 'Nunito Sans',       headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Orbitron',           body: 'Rajdhani',          headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Orbitron',           body: 'Exo 2',             headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Rajdhani',           body: 'IBM Plex Sans',     headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Jost',               body: 'Karla',             headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Plus Jakarta Sans',  body: 'DM Sans',           headingWeight: '700', bodyWeight: '400' },
+      { heading: 'IBM Plex Sans',      body: 'Lato',              headingWeight: '700', bodyWeight: '300' },
+      { heading: 'Barlow',             body: 'Mulish',            headingWeight: '700', bodyWeight: '400' },
+      // --- HUMANIST / WARM ---
+      { heading: 'Nunito Sans',        body: 'Mulish',            headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Quicksand',          body: 'Nunito',            headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Poppins',            body: 'Lato',              headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Poppins',            body: 'Open Sans',         headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Mulish',             body: 'Source Sans 3',     headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Karla',              body: 'Lato',              headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Cabin',              body: 'Nunito',            headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Hind',               body: 'Lato',              headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Barlow Condensed',   body: 'Barlow',            headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Asap',               body: 'Mulish',            headingWeight: '700', bodyWeight: '400' },
+      // --- DISPLAY / EXPRESSIVE ---
+      { heading: 'Righteous',          body: 'Nunito',            headingWeight: '400', bodyWeight: '400' },
+      { heading: 'Righteous',          body: 'Lato',              headingWeight: '400', bodyWeight: '300' },
+      { heading: 'Fredoka',            body: 'Quicksand',         headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Pacifico',           body: 'Lato',              headingWeight: '400', bodyWeight: '300' },
+      { heading: 'Pacifico',           body: 'Nunito',            headingWeight: '400', bodyWeight: '400' },
+      { heading: 'Lobster Two',        body: 'Source Sans 3',     headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Comfortaa',          body: 'Nunito',            headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Comfortaa',          body: 'Mulish',            headingWeight: '700', bodyWeight: '300' },
+      { heading: 'Cinzel',             body: 'Lato',              headingWeight: '700', bodyWeight: '300' },
+      { heading: 'Cinzel',             body: 'Raleway',           headingWeight: '700', bodyWeight: '300' },
+      // --- SLAB SERIF ---
+      { heading: 'Zilla Slab',         body: 'Source Sans 3',     headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Zilla Slab',         body: 'Open Sans',         headingWeight: '600', bodyWeight: '400' },
+      { heading: 'Arvo',               body: 'Lato',              headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Arvo',               body: 'Source Sans 3',     headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Rockwell',           body: 'Lato',              headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Crete Round',        body: 'Mulish',            headingWeight: '400', bodyWeight: '400' },
+      { heading: 'Slabo 27px',         body: 'Open Sans',         headingWeight: '400', bodyWeight: '400' },
+      { heading: 'Alfa Slab One',      body: 'Lato',              headingWeight: '400', bodyWeight: '300' },
+      { heading: 'Tinos',              body: 'Arimo',             headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Kameron',            body: 'Hind',              headingWeight: '700', bodyWeight: '400' },
+      // --- GEOMETRIC / STRUCTURED ---
+      { heading: 'Fustat',             body: 'Lato',              headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Teko',               body: 'Lato',              headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Anton',              body: 'Raleway',           headingWeight: '400', bodyWeight: '400' },
+      { heading: 'Anton',              body: 'Lato',              headingWeight: '400', bodyWeight: '300' },
+      { heading: 'Kanit',              body: 'Nunito',            headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Kanit',              body: 'Karla',             headingWeight: '600', bodyWeight: '400' },
+      { heading: 'Fjalla One',         body: 'Cantarell',         headingWeight: '400', bodyWeight: '400' },
+      { heading: 'Oswald',             body: 'Lato',              headingWeight: '700', bodyWeight: '300' },
+      { heading: 'Oswald',             body: 'Source Sans 3',     headingWeight: '700', bodyWeight: '400' },
+      { heading: 'PT Sans Narrow',     body: 'PT Sans',           headingWeight: '700', bodyWeight: '400' },
+      // --- REFINED / TRANSITIONAL ---
+      { heading: 'Spectral',           body: 'Source Sans 3',     headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Spectral',           body: 'Nunito Sans',       headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Crimson Pro',        body: 'Jost',              headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Domine',             body: 'Source Sans 3',     headingWeight: '700', bodyWeight: '400' },
+      { heading: 'PT Serif',           body: 'PT Sans',           headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Alegreya',           body: 'Lato',              headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Alegreya',           body: 'Source Sans 3',     headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Neuton',             body: 'Mulish',            headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Vollkorn',           body: 'Source Sans 3',     headingWeight: '700', bodyWeight: '400' },
+      { heading: 'Libre Caslon Text',  body: 'Nunito Sans',       headingWeight: '700', bodyWeight: '400' },
     ];
 
     /* ====================================================
