fixed mobile layout issue

--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
       /* No overflow clipping — let content determine height */
     }
 
+    /* Prevent any element from causing horizontal overflow on mobile */
+    html, body {
+      overflow-x: hidden;
+    }
+
     /* Two-column layout ────────────────────────────────────
        Desktop: side-by-side columns, each as tall as its own
        content. Page scrolls naturally — nothing is ever clipped.
@@ -136,9 +141,12 @@
     .layout-columns {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      align-items: start; /* each column only as tall as its content */
+      align-items: start;
       max-width: 1200px;
       margin: 0 auto;
+      /* Ensure the grid itself never exceeds the viewport */
+      width: 100%;
+      min-width: 0;
     }
 
     .col {
@@ -146,23 +154,14 @@
       display: flex;
       flex-direction: column;
       gap: 20px;
+      /* Critical: prevent column content from blowing out its grid track */
+      min-width: 0;
+      overflow: hidden;
     }
 
     .col-left {
       border-right: 1px solid var(--ui-border);
-      /* Sticky so the left column stays in view while scrolling past long right content */
-      position: sticky;
-      top: 0;
-      /* Allow left column to scroll internally if it's taller than the viewport */
-      max-height: 100vh;
-      overflow-y: auto;
-      scrollbar-width: thin;
-      scrollbar-color: var(--ui-border) transparent;
     }
-
-    .col-left::-webkit-scrollbar { width: 5px; }
-    .col-left::-webkit-scrollbar-track { background: transparent; }
-    .col-left::-webkit-scrollbar-thumb { background: var(--ui-border); border-radius: 3px; }
 
     @media (max-width: 768px) {
       .layout-columns {
@@ -171,6 +170,7 @@
       .col {
         padding: 20px clamp(14px, 4vw, 24px);
         gap: 16px;
+        overflow: visible; /* let mobile content breathe naturally */
       }
       .col-left {
         position: static;
@@ -306,6 +306,13 @@
       flex-wrap: wrap;
       align-items: center;
       gap: 10px;
+      min-width: 0;
+    }
+
+    /* Ensure cards never exceed their container */
+    .card {
+      min-width: 0;
+      width: 100%;
     }
 
     /* ====================================================
@@ -568,7 +575,8 @@
       line-height: 1.7;
       color: var(--ui-text);
       white-space: pre;
-      overflow-x: auto;
+      overflow-x: auto;   /* scroll horizontally within box, not the page */
+      max-width: 100%;
       transition: background var(--transition);
       max-height: 240px;
       overflow-y: auto;
@@ -797,6 +805,7 @@
       grid-template-columns: 1fr 1fr;
       gap: 16px;
       margin-bottom: 20px;
+      min-width: 0;
     }
 
     @media (max-width: 560px) {
@@ -1050,9 +1059,12 @@
       border: none;
     }
 
-    .pp-cards { display: grid; grid-template-columns: repeat(3, 1fr); gap: 1px; }
+    .pp-cards { display: grid; grid-template-columns: repeat(3, 1fr); gap: 1px; min-width: 0; }
 
-    .pp-card { padding: 14px 16px; }
+    @media (max-width: 480px) {
+      .pp-cards { grid-template-columns: 1fr; }
+      .pp-nav-links { display: none; }
+    }
 
     .pp-card-icon {
       width: 28px; height: 28px; border-radius: 6px;
