--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Æsthetic — Random Color & Font Generator</title>
+  <title>Asthetic Generator  — Random Color & Font Generator</title>
   <meta name="description" content="Generate cohesive color palettes and font pairings for your next project." />
   <link rel="icon" type="image/png" href="favicon.png" />
 
